# rvm-eupe

./: .gitignore  README.md  conda.yaml  get_datasets.sh  pyproject.toml
configs/: default.yaml
configs/data/: mixed.yaml
configs/model/: rvm_baseline_vitb.yaml  rvm_eupe_multiscale.yaml  rvm_eupe_vitb.yaml  rvm_eupe_vits.yaml  rvm_eupe_vitt.yaml
configs/train/: base.yaml  large_scale.yaml  smoke.yaml
rvm_eupe/data/: mixed_dataset.py  transforms.py  video_dataset.py
rvm_eupe/eval/: action_cls.py  davis.py  depth.py  keypoint.py  tracking.py
rvm_eupe/models/: decoder.py  encoder_wrapper.py  multiscale_adapter.py  readout_heads.py  recurrent_video_mae.py  transformer_gru.py
rvm_eupe/optim/: schedulers.py
scripts/: eval_frozen.py  make_diagrams.py  train.py
tests/: test_decoder.py  test_encoder_wrapper.py  test_multiscale_adapter.py  test_transformer_gru.py
